--- a/build-aur-action/Dockerfile
+++ b/build-aur-action/Dockerfile
@@ -5,4 +5,5 @@ RUN date
 RUN pacman -Syu --noconfirm
 RUN pacman -S base-devel git openssh pacman-contrib jq curl --noconfirm
 COPY entrypoint.sh /entrypoint.sh
-ENTRYPOINT ["bash /entrypoint.sh"] 
+RUN chmod a+x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"] 
