--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         PKGBUILDs:
         - koreader-bin
+        - icalingua-plus-plus
         
         
     runs-on: ubuntu-latest
