--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         PKGBUILDs:
         - koreader-bin
+        - icalingua++
 
         
         
@@ -29,7 +30,7 @@ jobs:
       - name: Publish AUR package
         uses: KSXGitHub/github-actions-deploy-aur@v2.2.5
         with:
-          pkgname: koreader-bin
+          pkgname: ${{ matrix.PKGBUILDs }}
           pkgbuild: ${{ matrix.PKGBUILDs }}/PKGBUILD
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
