--- a/icalingua++/PKGBUILD
+++ b/icalingua++/PKGBUILD
@@ -11,7 +11,7 @@ arch=('aarch64' 'x86_64' 'i686')
 url="https://github.com/Icalingua-plus-plus/Icalingua-plus-plus"
 provides=('electron-qq' 'icalingua')
 conflicts=('electron-qq')
-replaces=('electron-qq')
+replaces=('electron-qq' "icalingua-plus-plus")
 source=(512x512.png
         ${_pkgname}.desktop
         ${_pkgname})
