--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
       run: |
         git config --local user.email 1304024859@qq.com
         git config --local user.name zzy-ac
+        git add .
         git commit -m "update new time.log" -a
     - name: Push changes
       uses: ad-m/github-push-action@master
