--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
       matrix:
         PKGBUILDs:
         - koreader-bin
-        - listen1
-        - listen1-electron
-        - clash-for-windows-electron-zh
+#        - listen1
+#        - listen1-electron
+#        - clash-for-windows-electron-zh
 
 
 
