--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         PKGBUILDs:
         - koreader-bin
-        - icalingua++
+#        - icalingua++
         - listen1
         - listen1-electron
         - clash-for-windows-electron-zh
