--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,26 @@ on:
 
 jobs:
   # This workflow contains a single job called "build"
+  SourceNme:
+    strategy:
+      fail-fast: false
+      matrix:
+        SourceNames:
+        - koreader/koreader
+#        - Icalingua-plus-plus/Icalingua-plus-plus
+        - listen1/listen1_desktop
+        - Fndroid/clash_for_windows_pkg
+        - SabakiHQ/Sabaki
+    
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./build-aur-action
+        with:
+          pkgname: ${{ matrix.SouceNames }}
+        
+
   UpdatePkg:
     strategy:
       fail-fast: false
