--- a/.github/工作流/main.yml
+++ b/.github/工作流/main.yml
@@ -8,24 +8,7 @@ on:
 
 jobs:
   # This workflow contains a single job called "build"
-  SourceNme:
-    strategy:
-      fail-fast: false
-      matrix:
-        SourceNames:
-        - koreader/koreader
-#        - Icalingua-plus-plus/Icalingua-plus-plus
-        - listen1/listen1_desktop
-        - Fndroid/clash_for_windows_pkg
-        - SabakiHQ/Sabaki
-    
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./build-aur-action
-        with:
-          pkgname: ${{ matrix.SouceNames }}
+
         
 
   UpdatePkg:
@@ -39,7 +22,12 @@ jobs:
         - listen1-electron
         - clash-for-windows-electron-zh
         - sabaki-electron
-
+        SourceNames:
+        - koreader/koreader
+#        - Icalingua-plus-plus/Icalingua-plus-plus
+        - listen1/listen1_desktop
+        - Fndroid/clash_for_windows_pkg
+        - SabakiHQ/Sabaki
 
 
 
@@ -53,7 +41,7 @@ jobs:
         with:
           pkgname: ${{ matrix.PKGBUILDs }}
           pkgdir: ${{ matrix.PKGBUILDs }}
-          
+          sourcename: ${{ matrix.SourceNames }}
           
       - name: Publish AUR package
         uses: KSXGitHub/github-actions-deploy-aur@v2.2.5
