--- a/koreader-bin/PKGBUILD
+++ b/koreader-bin/PKGBUILD
@@ -8,9 +8,10 @@ arch=("x86_64")
 url="https://github.com/koreader/koreader/"
 license=('AGPL3')
 depends=('sdl2' 'fonts-noto-hinted' 'fonts-droid-fallback')
-source=(
-  "https://github.com/koreader/koreader/releases/download/v${pkgver}/koreader-${pkgver}-amd64.deb")
-sha512sums=('3d6eb896b57815f84eaabd75671c9f2e38e684cc8ff50741958148469be3b486d8cd12436eea83a89059074a09b441f8f66d96b79a224c47ac11383ffc007092')
+source_x86_64=("https://github.com/koreader/koreader/releases/download/v${pkgver}/koreader-${pkgver}-amd64.deb")
+source_aarch64=("https://github.com/koreader/koreader/releases/download/v${pkgver}/koreader-${pkgver}-arm64.deb")
+sha256sums_x86_64=('3d6eb896b57815f84eaabd75671c9f2e38e684cc8ff50741958148469be3b486d8cd12436eea83a89059074a09b441f8f66d96b79a224c47ac11383ffc007092')
+sha256sums_aarch64=('')
 
 build() {
   mkdir -p "${srcdir}/dpkgdir"
