--- a/koreader-bin/PKGBUILD
+++ b/koreader-bin/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=koreader-bin
 pkgver=2022.08
 pkgrel=1
 pkgdesc="An ebook reader application supporting PDF, DjVu, EPUB, FB2 and many more formats, running on Cervantes, Kindle, Kobo, PocketBook and Android devices"
-arch=("x86_64")
+arch=("x86_64" 'aarch64')
 url="https://github.com/koreader/koreader/"
 license=('AGPL3')
 depends=('sdl2' 'fonts-noto-hinted' 'fonts-droid-fallback')
