--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+      with:
+         persist-credentials: false
+         fetch-depth: 0
     - name: Make Time log #Api调用
       run: | 
         echo `date +"%Y-%m-%d %H:%M:%S"` begin >> time.log     
