--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,15 +43,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
       with:
-         persist-credentials: false
          fetch-depth: 0
     - name: Make Time log #Api调用
       run: | 
         echo `date +"%Y-%m-%d %H:%M:%S"` begin >> time.log     
     - name: Commit #上传新的refresh_token到仓库
       run: |
-        git config --local user.email zhaoyuanpan@gmail.com
-        git config --local user.name TimeTrap
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git add .
         git commit -m "update new time.log" -a
     - name: Push changes
