--- a/cursor-appimage/PKGBUILD
+++ b/cursor-appimage/PKGBUILD
@@ -3,6 +3,7 @@
 # Contributor: Usama <eruzzamma at gmail dot com>
 pkgname=cursor-appimage
 _pkgname=cursor
+pkgver=0.20.2
 pkgrel=1
 pkgdesc="Write, edit, and chat about your code with GPT. (AppImage)"
 arch=('x86_64')
@@ -12,7 +13,7 @@ options=('!strip')
 depends=('hicolor-icon-theme' 'zlib')
 
 # Use curl to get the filename and extract the version
-pkgver=$(curl -s -o /dev/null -D - -r 0-0 https://download.cursor.sh/linux/appImage/x64 | grep -o -E 'filename=.*$' | sed -e 's/.*cursor-\(.*\)\(.*\)\.AppImage.*/\1\.\2/')
+# pkgver=$(curl -s -o /dev/null -D - -r 0-0 https://download.cursor.sh/linux/appImage/x64 | grep -o -E 'filename=.*$' | sed -e 's/.*cursor-\(.*\)\(.*\)\.AppImage.*/\1\.\2/')
 
 source=("${_pkgname}-${pkgver}.AppImage::https://download.cursor.sh/linux/appImage/x64")
 sha256sums=('c172265ff5a7db6660cf44680785e1de87ed1b8cfdb127c8b615130ed8856ba2')
